docs: README 전면 개편 — 로컬 리허설 제거, 실행 방법/목표·결과 요약 추가
- 실제로 로컬 Docker 리허설은 한 번도 안 썼으므로 관련 섹션(A. 로컬
  리허설)과 env/configmap.env.example을 전부 제거. 처음부터 실배포
  단일 인스턴스만 대상으로 진행했음을 명확히 함
- "무엇을 확인하려 했고, 무엇을 알아냈나" 요약 섹션 신설 — 핵심 질문,
  최종 결론(병목은 락이 아니라 커넥션 풀), 과정에서 찾은 실제 버그 3개
  (서버 스키마 드리프트, 테스트 유저 재사용, k6 __VU 넘버링)를 한눈에
  정리
- "실행 방법" 섹션을 실제로 밟은 절차 그대로(시드 → 실행 → RESULT 로그
  집계 → kubectl 관측 → 로그 즉시 확보) 재작성